# rust-up-bank-rest-api

./: .gitignore  Cargo.toml  README.md  test.toml
examples/: list-accounts.rs
src/: accounts.rs  categories.rs  client.rs  general.rs  lib.rs  main.rs  tags.rs  transactions.rs  utility.rs
src/test/: main.rs
