[package]
name = "up-bank-api"
version = "0.1.1"
authors = ["Karl Runge"]
edition = "2018"
description = "Rust Library for accessing the Up Bank API in an easy way"
repository = "https://github.com/IAmMadfly/rust-up-bank-rest-api"
readme = "README.md"
keywords = ["bank", "up", "upbank"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^1.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"
