[package]
name = "up-bank-api"
version = "0.1.3"
authors = ["Karl Runge"]
edition = "2018"
description = "Rust Library for accessing the Up Bank API in an easy way"
repository = "https://github.com/IAmMadfly/rust-up-bank-rest-api"
readme = "README.md"
keywords = ["bank", "up", "upbank"]
license = "MIT"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^1.0.0"
reqwest = "0.11.16"
serde = "1.0.130"
serde_derive = "1.0.130"

[dev-dependencies]
toml = "0.7.3"
serde_json = "1.0"
